--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -2,9 +2,9 @@ name: cell_growth
 channels:
   - conda-forge
 dependencies:
-  - matplotlib=3.5.1=py310hb6292c7_0
-  - matplotlib-base=3.5.1=py310hacb9267_0
-  - numpy=1.22.0=py310h567df17_0
-  - openpyxl=3.0.9=pyhd8ed1ab_0
-  - pandas=1.3.5=py310hdead3df_0
-  - python=3.10.2=h43b31ca_0_cpython
+  - matplotlib=3.5.1
+  - matplotlib-base=3.5.1
+  - numpy=1.22.0
+  - openpyxl=3.0.9
+  - pandas=1.3.5
+  - python=3.10.2
