--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,5 @@ _scratch.py
 functions/__pycache__/functions.cpython-310.pyc
 old/Growth.py
 functions/__pycache__/functions.cpython-310.pyc
-old
+old/
 functions/__pycache__/
