--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /shelf/
 /workspace.xml
 ./test_data
-.idea
+.idea/
 split_fasta.py
 .DS_Store
 test_jupyter.ipynb
@@ -12,6 +12,5 @@ _scratch.py
 *.pdf
 functions/__pycache__/functions.cpython-310.pyc
 old/Growth.py
-functions/__pycache__/functions.cpython-310.pyc
 old/
 functions/__pycache__/
