--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,4 @@ _scratch.py
 functions/__pycache__/functions.cpython-310.pyc
 old/Growth.py
 old/
-functions/__pycache__/
-__pycache__/
+**/__pycache__
