--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ test_jupyter.ipynb
 _one_plate_script.py
 _scratch.py
 dependencies.yaml
+*.ipynb
 *.pyc
 *.pdf
 functions/__pycache__/functions.cpython-310.pyc
